--- a/gestion-tutorat-front/src/app/app.component.html
+++ b/gestion-tutorat-front/src/app/app.component.html
@@ -17,6 +17,27 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
+        <!-- Importation -->
+        <li class="nav-item">
+          <a routerLink="/import" routerLinkActive="active" class="nav-link">Importer Fichiers</a>
+        </li>
+
+        <!-- Liste -->
+        <li class="nav-item">
+          <a routerLink="/etudiants/all" routerLinkActive="active" class="nav-link">Liste Étudiants</a>
+        </li>
+
+        <!-- Auto-Affectation -->
+        <li class="nav-item">
+          <a routerLink="/auto-affectation" routerLinkActive="active" class="nav-link">Auto-Affectation</a>
+        </li>
+
+        <!-- Reporting -->
+        <li class="nav-item">
+          <a routerLink="/reporting" routerLinkActive="active" class="nav-link">Reporting</a>
+        </li>
+
+        <!-- Ajouts -->
         <li class="nav-item">
           <a routerLink="/etudiant-create" routerLinkActive="active" class="nav-link">Ajouter Étudiant</a>
         </li>
@@ -24,16 +45,7 @@
           <a routerLink="/tuteur-create" routerLinkActive="active" class="nav-link">Ajouter Tuteur</a>
         </li>
         <li class="nav-item">
-          <a routerLink="/etudiants/all" routerLinkActive="active" class="nav-link">Liste Étudiants</a>
-        </li>
-        <li class="nav-item">
-          <a routerLink="/import" routerLinkActive="active" class="nav-link">Importer</a>
-        </li>
-        <li class="nav-item">
-          <a routerLink="/auto-affectation" routerLinkActive="active" class="nav-link">Auto-Affectation</a>
-        </li>
-        <li class="nav-item">
-          <a routerLink="/reporting" routerLinkActive="active" class="nav-link">Reporting</a>
+          <a routerLink="/majeure-create" routerLinkActive="active" class="nav-link">Ajouter Majeure</a>
         </li>
       </ul>
     </div>
