--- a/gestion-tutorat-front/src/app/components/affectation-manuelle/affectation-manuelle.component.css
+++ b/gestion-tutorat-front/src/app/components/affectation-manuelle/affectation-manuelle.component.css
@@ -7,6 +7,7 @@ mat-card{
   justify-content: space-between;
   gap: 20px; /* Adds space between the two columns */
   padding: 20px;
+  
 }
 
 /* Left column for students */
@@ -15,8 +16,10 @@ mat-card{
   display: flex;
   flex-direction: column;
   gap: 20px;
-  background-color: #f8f8f8;
   border-radius: 5px;
+  max-height: 89vh;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .right-column {
@@ -24,6 +27,10 @@ mat-card{
   display: flex;
   flex-direction: column;
   gap: 20px;
+  
+  max-height: 89vh;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .cards-container {
@@ -55,11 +62,13 @@ mat-card{
   border-radius: 5px; /* Rounded corners for the card */
 }
 
+
 mat-card-title {
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-size: 18px;
+  position: sticky;
 }
 
 mat-card-title span {
